# Neural-Networks

./: .gitignore  CMakeLists.txt  README.md  makefile  run.sh  test_preds.csv  testing.ipynb
src/: constants.cpp  constants.hpp  hparams.hpp  main.cpp
src/data/: dataloader.hpp  dataset.cpp  dataset.hpp
src/matrix/: exceptions.hpp  matrix.cpp  matrix.hpp  printer.hpp  tests.cpp  tests.hpp
src/network/: activation.hpp  helpers.cpp  helpers.hpp  linear.cpp  linear.hpp  network.cpp  network.hpp  optimizer.cpp  optimizer.hpp
src/parser/: csv.cpp  csv.hpp  csv_reader.cpp  csv_reader.hpp
src/tests/: csv_tests.cpp  matrix_tests.cpp  tests.hpp
